Incorporated feedback from mentor. Fixed nav bar layout issue for camping page

--- a/HomeWildLearn/css/beware.css
+++ b/HomeWildLearn/css/beware.css
@@ -121,7 +121,7 @@
 .testimonial {
     background: #fff;
     padding: 30px;
-    height: 65vh;
+    height: 50vh;
 }
 
     .testimonial img {
